--- a/journal-agent/backend/requirements.txt
+++ b/journal-agent/backend/requirements.txt
@@ -2,6 +2,10 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 pydub==0.25.1
-numpy==1.26.2
-Pillow==10.1.0
+numpy>=1.24.0
+Pillow>=9.0.0
 requests==2.31.0
+python-socketio[asyncio_client]==5.8.0
+aiofiles==23.2.1
+pydantic>=2.0.0
+python-dotenv==1.0.0
