--- a/journal-agent/frontend/package.json
+++ b/journal-agent/frontend/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@elevenlabs/react": "^0.2.2",
+    "@tiptap/react": "^2.1.0",
+    "@tiptap/starter-kit": "^2.1.0",
+    "@tiptap/extension-highlight": "^2.1.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
